# SolanaPolandKrakow

./: .gitignore  README.md  package-lock.json  package.json
anchor/: Anchor.toml  package.json
anchor/programs/game_registry/: Cargo.toml
anchor/programs/game_registry/src/: lib.rs
anchor/programs/leaderboard/: Cargo.toml
anchor/programs/leaderboard/src/: lib.rs
anchor/programs/reward_vault/: Cargo.toml
anchor/programs/reward_vault/src/: lib.rs
anchor/programs/solana_krakow/: Cargo.toml
anchor/programs/solana_krakow/src/: lib.rs
anchor/programs/tip_jar/: Cargo.toml
anchor/programs/tip_jar/src/: lib.rs
anchor/tests/: solana_krakow.ts
apps/backend/: .env.example  package.json  tsconfig.json
apps/backend/data/: gamefeed.db  gamefeed.db-shm  gamefeed.db-wal
apps/backend/src/: index.ts
apps/backend/src/agent/: loop.ts  prompts.ts  prompts3d.ts  tools.ts  tools3d.ts  types.ts
apps/backend/src/db/: client.ts  schema.ts
apps/backend/src/lib/: imageGen.ts  openrouter.ts  search.ts
apps/backend/src/routes/: assets.ts  games.ts  generate.ts
apps/frontend/: index.html  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
apps/frontend/src/: App.tsx  index.css
apps/frontend/src/components/creator/: AgentProgress.tsx  AiGameCanvas.tsx  AssetGallery.tsx  CodeEditor.tsx  CreatorChat.tsx  CreatorHistory.tsx  GamePreview.tsx  GameTypeSelector.tsx  VersionBadge.tsx  VersionTimeline.tsx
apps/frontend/src/components/creator3d/: CodeFiles3D.tsx  Editor3D.tsx  Hierarchy.tsx  Inspector.tsx  TemplateSelector3D.tsx  Toolbar3D.tsx  Viewport3D.tsx
apps/frontend/src/hooks/: useAgentStream.ts  useGame.ts  useGameGenerator.ts  useGameRegistry.ts  useInfiniteScroll.ts  useLeaderboard.ts  useScoreSubmit.ts  useSolanaBalance.ts  useTip.ts  useTokenBalances.ts
apps/frontend/src/lib/: gameRunner.ts  mockData.ts  openrouter.ts
apps/frontend/src/lib/sdk/: types.ts  (+1 more)
apps/frontend/src/pages/: CreatorPage.tsx  FeedPage.tsx  LeaderboardPage.tsx  ProfilePage.tsx  PublishPage.tsx
apps/frontend/src/providers/: QueryProvider.tsx  WalletProvider.tsx
apps/frontend/src/stores/: creatorStore.ts  feedStore.ts  gameStore.ts  userStore.ts
(+41 files in other folders)
