[package]
name = "solana_krakow"
version = "0.1.0"
description = "Solana Krakow program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_krakow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
