[package]
name = "tip_jar"
version = "0.1.0"
description = "GameFeed SOL tipping program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tip_jar"

[features]
idl-build = ["anchor-lang/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
